2017-10-10  Michael Catanzaro  <mcatanzaro@igalia.com>

        [WPE] Expose ENABLE_XSLT option
        https://bugs.webkit.org/show_bug.cgi?id=177857

        Reviewed by Carlos Alberto Lopez Perez.

        * Source/cmake/OptionsWPE.cmake:

2017-10-09  Adrian Perez de Castro  <aperez@igalia.com>

        [WPE][GTK] Propagate libepoxy compiler flags obtained from pkg-config
        https://bugs.webkit.org/show_bug.cgi?id=178081

        Reviewed by Carlos Alberto Lopez Perez.

        * Source/cmake/FindLibEpoxy.cmake: Define the ${LIBEPOXY_DEFINITIONS} variable when libepoxy
        is found by pkg-config. This contains the value of the "Cflags" field from "epoxy.pc".

2017-10-05  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        Generate a compile error if release is built without compiler optimizations
        https://bugs.webkit.org/show_bug.cgi?id=177665

        Reviewed by Brian Burg.

        Default to RelWithDebInfo if CMAKE_BUILD_TYPE is unset.

        * CMakeLists.txt:

2017-10-02  Olivier Blin  <olivier.blin@softathome.com>

        [WPE] Remove GnuTLS dependency
        https://bugs.webkit.org/show_bug.cgi?id=177750

        Reviewed by Michael Catanzaro.

        libgcrypt is used by default instead of GnuTLS.
        See bug 163125

        * Source/cmake/OptionsWPE.cmake:

2017-10-02  Olivier Blin  <olivier.blin@softathome.com>

        [WPE] Do not require XSLT if disabled
        https://bugs.webkit.org/show_bug.cgi?id=177752

        Reviewed by Michael Catanzaro.

        * Source/cmake/OptionsWPE.cmake: libxslt is not a hard dep

2017-09-26  Zan Dobersek  <zdobersek@igalia.com>

        [CMake] Use implicit include directories for Clang as well
        https://bugs.webkit.org/show_bug.cgi?id=177426

        Reviewed by Michael Catanzaro.

        In WebKitCompilerFlags.cmake, also gather and use the system
        include directories for C and C++ build targets when compiling