@@ -1,5 +1,14 @@
 2017-10-10  Adrian Perez de Castro  <aperez@igalia.com>
 
+        [WPE] Remove the possibility of installing the old WebKit2 C API
+        https://bugs.webkit.org/show_bug.cgi?id=178125
+
+        Reviewed by Michael Catanzaro.
+
+        * PlatformWPE.cmake: Remove support for installing the deprecated C API.
+
+2017-10-10  Adrian Perez de Castro  <aperez@igalia.com>
+
         [WPE] Header cairo.h is used in GLib API headers but cannot be found
         https://bugs.webkit.org/show_bug.cgi?id=178100
 
